--- a/package.json
+++ b/package.json
@@ -4,13 +4,20 @@
   "main": "api.js",
   "scripts": {
     "start:api": "node api.js",
-    "watch:api": "nodemon api.js"
+    "watch:api": "nodemon api.js",
+    "start:client": "node client.js",
+    "watch:client": "nodemon client.js"
   },
   "author": "OCTO",
   "license": "ISC",
   "dependencies": {
+    "axios": "0.25.0",
     "dotenv": "^16.0.3",
-    "express": "^4.18.1"
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
+    "express-openid-connect": "^2.11.0",
+    "jose": "^4.11.2",
+    "openid-client": "^5.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
